[package]
name = "iota_stronghold"
version = "0.4.1"
publish = false
authors = [
  "IOTA Stiftung",
  "tensor-programming <tensordeveloper@gmail.com>"
]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
description = "Client interface for Stronghold"
keywords = [ "iota", "stronghold", "security" ]
categories = [ "security" ]
homepage = "https://stronghold.docs.iota.org"
repository = "https://github.com/iotaledger/stronghold.rs"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = [ "derive" ] }
zeroize = "1.1"
zeroize_derive = "1.0"
anyhow = "1.0"
thiserror = "1.0"
actix = "0.12"
futures = "0.3"
web3 = { git = "https://github.com/tomusdrw/rust-web3", rev = "8796c88c4cb95864bdfeffb40ebb061c283aca74" }
tiny-keccak = "2.0"

[dependencies.stronghold_engine]
path = "../engine"
version = "0.4"

[dependencies.iota-crypto]
git = "https://tributary.semantic-network.tech/semnet/Libs/crypto.rs"
branch = "dev"
features = [
"random",
"ed25519",
"sr25519",
"sha",
"hmac",
"bip39-en",
"slip10",
"chacha",
"secp256k1"
]

[dependencies.stronghold-p2p]
path = "../p2p"
version = "0.3"
optional = true

[dependencies.stronghold-utils]
path = "../utils"
version = "0.3"

[features]
p2p = ["stronghold-p2p"]

[dev-dependencies]
hex = "0.4.2"
criterion = { version = "0.3.3", features = ["async_tokio"] }
clap = { version = "3.0.0-beta.1", features = [ "yaml" ] }
rand = "0.8.3"
tokio = {version = "1.9", features = ["rt-multi-thread"] }

[[example]]
name = "p2p"
required-features = ["p2p"]


[[bench]]
name = "benchmark"
harness = false

[package.metadata.docs.rs]
all-features = true