[package]
name = "ex_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = [ "derive" ] }
zeroize = "1.1"
zeroize_derive = "1.0"
anyhow = "1.0"
thiserror = "1.0"
futures = { version = "0.3", optional = true }

[dependencies.stronghold-utils]
path = "../utils"
version = "0.3"

[dependencies.stronghold_engine]
path = "../engine"
version = "0.4"

[dependencies.iota-crypto]
git = "https://github.com/tidelabs/crypto.rs"
branch = "dev"
features = [
"random",
"ed25519",
"sr25519",
"sha",
"hmac",
"bip39-en",
"slip10",
"chacha",
"secp256k1"
]